# Evaluador_Expresiones

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: evaluar.h
src/: evaluar.cpp  mainF.cpp
tests/: test.cpp
